添加一些文件

--- a/src/main/webapp/pages/login.html
+++ b/src/main/webapp/pages/login.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>登录 - myInfoSystem</title>
+    <title>登录 - InfoSystem</title>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -103,7 +103,7 @@
     </div>
 
     <div class="login-footer">
-        <p>© 2018 <a href="https://www.stylefeng.cn" target="_blank">stylefeng版权所有</a></p>
+        <p>© 2019 <a href="https://github.com/DaulYello/myInfoSystem" target="_blank">yello版权所有</a></p>
     </div>
 </div>
 
