--- a/src/main/webapp/pages/modular/system/menu/menu.html
+++ b/src/main/webapp/pages/modular/system/menu/menu.html
@@ -35,6 +35,7 @@
 </div>
 
 <script type="text/html" id="tableBar">
+    <div>shiro.hasPermission</div>
     @if(shiro.hasPermission("/menu/edit")){
     <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="edit">修改</a>
     @}
