--- a/src/main/webapp/pages/modular/system/user/user.html
+++ b/src/main/webapp/pages/modular/system/user/user.html
@@ -9,7 +9,9 @@
         <div class="layui-col-sm12 layui-col-md3 layui-col-lg2">
             <div class="layui-card">
                 <div class="layui-card-body mini-bar">
-                    <div class="ztree" id="deptTree"></div>
+                    <div class="ztree" id="deptTree">
+
+                    </div>
                 </div>
             </div>
         </div>
