日志和临时缓存

--- a/src/main/webapp/pages/404.html
+++ b/src/main/webapp/pages/404.html
@@ -33,7 +33,7 @@
 <!-- js部分 -->
 @/* 加入contextPath属性和session超时的配置 */
 <script type="text/javascript">
-    var Feng = {
+    var Huang = {
         ctxPath: "",
         addCtx: function (ctx) {
             if (this.ctxPath === "") {
@@ -41,7 +41,7 @@
             }
         }
     };
-    Feng.addCtx("${ctxPath}");
+    Huang.addCtx("${ctxPath}");
 </script>
 <script type="text/javascript" src="${ctxPath}/assets/common/layui/layui.js"></script>
 <script type="text/javascript" src="${ctxPath}/assets/common/js/common.js"></script>
