--- a/src/main/webapp/pages/common/_container.html
+++ b/src/main/webapp/pages/common/_container.html
@@ -48,7 +48,7 @@ ${layoutContent}
 
 @/* 加入contextPath属性和session超时的配置 */
 <script type="text/javascript">
-    var Feng = {
+    var Huang = {
         ctxPath: "",
         addCtx: function (ctx) {
             if (this.ctxPath === "") {
@@ -56,7 +56,7 @@ ${layoutContent}
             }
         }
     };
-    Feng.addCtx("${ctxPath}");
+    Huang.addCtx("${ctxPath}");
 </script>
 
 @/* js和业务用的js数组 */
