--- a/src/main/webapp/pages/login.html
+++ b/src/main/webapp/pages/login.html
@@ -43,7 +43,7 @@
 <div class="login-wrapper">
 
     <div class="login-header">
-        <img src="${ctxPath}/assets/expand/images/logo.png"> ${systemName}
+        <img src="${ctxPath}/assets/expand/images/big.png"> ${systemName}
     </div>
 
     <div class=" login-body">
@@ -109,7 +109,7 @@
 
 @/* 加入contextPath属性和session超时的配置 */
 <script type="text/javascript">
-    var Feng = {
+    var Huang = {
         ctxPath: "",
         addCtx: function (ctx) {
             if (this.ctxPath === "") {
@@ -117,7 +117,7 @@
             }
         }
     };
-    Feng.addCtx("${ctxPath}");
+    Huang.addCtx("${ctxPath}");
 </script>
 <script type="text/javascript" src="${ctxPath}/assets/common/layui/layui.js"></script>
 <script type="text/javascript" src="${ctxPath}/assets/common/js/common.js"></script>
