--- a/src/main/webapp/pages/index.html
+++ b/src/main/webapp/pages/index.html
@@ -34,7 +34,7 @@
 
 @/* 加入contextPath属性和session超时的配置 */
 <script type="text/javascript">
-    var Feng = {
+    var Huang = {
         ctxPath: "",
         addCtx: function (ctx) {
             if (this.ctxPath === "") {
@@ -42,7 +42,7 @@
             }
         }
     };
-    Feng.addCtx("${ctxPath}");
+    Huang.addCtx("${ctxPath}");
 </script>
 <script type="text/javascript" src="${ctxPath}/assets/common/layui/layui.js"></script>
 <script type="text/javascript" src="${ctxPath}/assets/common/js/common.js"></script>
