--- a/src/main/webapp/pages/common/_footer.html
+++ b/src/main/webapp/pages/common/_footer.html
@@ -1,6 +1,6 @@
 @/* 页脚 */
 <div class="layui-footer">
-    Copyright © 2018 <a href="https://www.stylefeng.cn" target="_blank">stylefeng</a> All rights reserved.
+    don't  worry be happy
     <span class="pull-right">Version 旗舰版 v2.5</span>
 </div>
 
